[package]
name = "pallet-assets"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME asset management pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
# Needed for various traits. In our case, `OnFinalize`.
sp-runtime = { version = "2.0.0", default-features = false }
# Needed for type-safe access to storage DB.
frame-support = { version = "2.0.0", default-features = false }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
frame-system = { version = "2.0.0", default-features = false }
pallet-balances = { default-features = false, version = '2.0.0' }


[dev-dependencies]
sp-core = { version = "2.0.0" }
sp-std = { version = "2.0.0" }
sp-io = { version = "2.0.0" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	'pallet-balances/std',
	"frame-system/std",
]