[package]
authors = ['TeaRust']
description = 'gluon pallet'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-gluon'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-io = { default-features = false, version = '2.0.0' }
sp-core = { default-features = false, version = '2.0.0' }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
sp-api = { default-features = false, version = '2.0.0' }
pallet-balances = { default-features = false, version = '2.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sha2 = { version = "0.8.0", default-features = false }

[dev-dependencies]
serde_json = "1.0"
hex = "0.4.0"
pretty_assertions = "0.6.1"
hex-literal = "0.2.1"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'frame-system/std',
    'sp-std/std',
    "sp-runtime/std",
    'serde',
    'pallet-balances/std',
]

