[package]
authors = ['TeaRust']
description = 'tea pallet'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-tea'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-io = { default-features = false, version = '2.0.0' }
sp-core = { default-features = false, version = '2.0.0' }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
sp-api = { default-features = false, version = '2.0.0' }
pallet-balances = { default-features = false, version = '2.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sha2 = { version = "0.8.0", default-features = false }
hex = {default-features = false, version = "0.4.2"}

#[dependencies.pallet-randomness-collective-flip]
#default-features = false
#git = 'https://github.com/paritytech/substrate.git'
#package = 'pallet-randomness-collective-flip'
#tag = 'v2.0.0-rc4'
#version = '2.0.0-rc4'



[dev-dependencies]
serde_json = "1.0"
hex = "0.4.0"
pretty_assertions = "0.6.1"
hex-literal = "0.2.1"


# Substrate dependencies
#frame-benchmarking = { default-features = false, optional = true, version = '2.0.0' }
#frame-executive = { default-features = false, version = '2.0.0' }
#frame-support = { default-features = false, version = '2.0.0' }
#frame-system = { default-features = false, version = '2.0.0' }
#frame-system-benchmarking = { default-features = false, optional = true, version = '2.0.0' }
#frame-system-rpc-runtime-api = { default-features = false, version = '2.0.0' }
#pallet-aura = { default-features = false, version = '2.0.0' }
#pallet-balances = { default-features = false, version = '2.0.0' }
#pallet-grandpa = { default-features = false, version = '2.0.0' }
#pallet-randomness-collective-flip = { default-features = false, version = '2.0.0' }
#pallet-sudo = { default-features = false, version = '2.0.0' }
#pallet-timestamp = { default-features = false, version = '2.0.0' }
#pallet-transaction-payment = { default-features = false, version = '2.0.0' }
#pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '2.0.0' }
#sp-api = { default-features = false, version = '2.0.0' }
#sp-block-builder = { default-features = false, version = '2.0.0' }
#sp-consensus-aura = { default-features = false, version = '0.8.0' }
#sp-core = { default-features = false, version = '2.0.0' }
#sp-inherents = { default-features = false, version = '2.0.0' }
#sp-offchain = { default-features = false, version = '2.0.0' }
#sp-runtime = { default-features = false, version = '2.0.0' }
#sp-session = { default-features = false, version = '2.0.0' }
#sp-std = { default-features = false, version = '2.0.0' }
#sp-transaction-pool = { default-features = false, version = '2.0.0' }
#sp-version = { default-features = false, version = '2.0.0' }
#sp-core = { default-features = false, version = '2.0.0' }
#sp-io = { default-features = false, version = '2.0.0' }
#sp-runtime = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'frame-system/std',
    'sp-std/std',
    "sp-runtime/std",
    'serde',
    'pallet-balances/std',
]

